Added setTimeout to redriect

--- a/views/create.ejs
+++ b/views/create.ejs
@@ -33,14 +33,7 @@
             <th>Сумма</th>
           </tr>
         </thead>
-        <tbody>
-          <% sum.forEach(function(item){ %>
-          <tr>
-            <td><%= item[0] %></td>
-            <td><%= item[1] %></td>
-          </tr>
-          <% }); %>
-        </tbody>
+        <tbody></tbody>
       </table>
     </div>
     <a href="/">Go back</a>
