Layout will be created when function is Done

--- a/views/create.ejs
+++ b/views/create.ejs
@@ -24,7 +24,7 @@
     <title>Show money</title>
   </head>
   <body>
-    <h2>Еженедельный заработок в компании AliveMax</h2>
+    <h2>Еженедельный заработок <%= name %></h2>
     <div class="table-responsive">
       <table class="table table-striped table-sm">
         <thead>
