--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,21 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-      crossorigin="anonymous"
-    />
 
-    <title>Main page</title>
-  </head>
-  <body>
-    <form method="POST">
-      <input type="text" name="username" />
-      <input type="password" name="password" />
-      <button type="submit">Submit</button>
-    </form>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>Main page</title>
+  <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
+  <link rel="stylesheet" href="/stylesheets/styles.css">
+</head>
+
+<body class="text-center">
+  <!-- <form method="POST">
+    <input type="text" name="username" />
+    <input type="password" name="password" />
+    <button type="submit">Submit</button>
+  </form> -->
+  <form method="POST" class="form-signin">
+    <h1 class="h3 mb-3 font-weight-normal">Авторизация</h1>
+    <label for="inputEmail" class="sr-only">Логин</label>
+    <input name="username" type="text" id="inputEmail" class="form-control" placeholder="Логин" required autofocus>
+    <label for="inputPassword" class="sr-only">Пароль</label>
+    <input name="password" type="password" id="inputPassword" class="form-control" placeholder="Пароль" required>
+    <button class="btn btn-lg btn-primary btn-block" type="submit">Войти</button>
+    <p class="mt-5 mb-3 text-muted">&copy; Nartay Dembayev</p>
+  </form>
+  <script>
+  </script>
+</body>
+
 </html>
