Refactored and added localstorage

--- a/views/create.ejs
+++ b/views/create.ejs
@@ -11,7 +11,7 @@
     var tbody = $('tbody');
     tbody.remove();
   </script>
-  <title>Показ зарплаты AliveMax</title>
+  <title>Зарплаты AliveMax</title>
 </head>
 
 <body>
